some modifications
